--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hjhotel-front-user",
+  "homepage": "https://oonet96.github.io/hjhotel-front-user/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
